--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     -->
     <iframe 
         id="fullscreen-iframe" 
-        src="https://jandjindustries.blogspot.com/" 
+        src="https://jandjindustriesmarketing.blogspot.com/" 
         title="Embedded Fullscreen Website" 
         frameborder="0">
     </iframe>
